frontend/src/app/edit/edit.component.scss
/* ... */
/* Set the default font for the "page" of the content. */
.document-editor .ck-content,
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    font: 16px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* Adjust the headings dropdown to host some larger heading styles. */
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    line-height: calc(1.7 * var(--ck-line-height-base) * var(--ck-font-size-base));
    min-width: 6em;
}

/* Scale down all heading previews because they are way too big to be presented in the UI.
Preserve the relative scale, though. */
.document-editor .ck-heading-dropdown .ck-list .ck-button:not(.ck-heading_paragraph) .ck-button__label {
    transform: scale(0.8);
    transform-origin: left;
}

/* Set the styles for "Heading 1". */
.document-editor .ck-content h2,
.document-editor .ck-heading-dropdown .ck-heading_heading1 .ck-button__label {
    font-size: 2.18em;
    font-weight: normal;
}

.document-editor .ck-content h2 {
    line-height: 1.37em;
    padding-top: .342em;
    margin-bottom: .142em;
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3,
.document-editor .ck-heading-dropdown .ck-heading_heading2 .ck-button__label {
    font-size: 1.75em;
    font-weight: normal;
    color: hsl(203, 100%, 50%);
}

.document-editor .ck-heading-dropdown .ck-heading_heading2.ck-on .ck-button__label {
    color: var(--ck-color-list-button-on-text);
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3 {
    line-height: 1.86em;
    padding-top: .171em;
    margin-bottom: .357em;
}

/* Set the styles for "Heading 3". */
.document-editor .ck-content h4,
.document-editor .ck-heading-dropdown .ck-heading_heading3 .ck-button__label {
    font-size: 1.31em;
    font-weight: bold;
}

.document-editor .ck-content h4 {
    line-height: 1.24em;
    padding-top: .286em;
    margin-bottom: .952em;
}

/* Set the styles for "Paragraph". */
.document-editor .ck-content p {
    font-size: 1em;
    line-height: 1.63em;
    padding-top: .5em;
    margin-bottom: 1.13em;
}

/* Make the block quoted text serif with some additional spacing. */
.document-editor .ck-content blockquote {
    font-family: Georgia, serif;
    margin-left: calc(2 * var(--ck-spacing-large));
    margin-right: calc(2 * var(--ck-spacing-large));
}

.currentZoom {
    width: 40px;
    text-align: center;
}


// Above are all the stylings for the document editor

.extractedTextDialog {
    z-index: 11 !important;
}

.copyTextWrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

.copyText {
    width: max-content;
    max-width: 70%;
    min-height: 1rem;
    height: 1rem;
    margin-right: auto;
}

.copyTextIcon {
    margin: auto;
    width: 20px;
    height: 20px;
}

.copyTextIconWrapper {
    margin: auto;
    margin-right: 20px;
    padding: 20px;

    border-radius: 5px;
    width: 30px;
    height: 30px;
    padding: 5px;
}

.spinner {
    margin: auto;
    width: 30%;
}

.spinnerWrapper {
    display: flex;
    margin: auto;
}

.deleteSpinnerWrapper {
    display: flex;
    height: 100%;
    margin: auto;
}

.sidebarTabs {
    display: flex;
    margin: auto;
    padding-top: 6px;
    justify-content: space-around;
    background: #ddd;
    width: 260px;
}

.selectedButton,
.unselectedButton {
    display: flex;
    transition: 0.2s;
    border-radius: 5px 5px 0 0;
    flex: 1;
    text-align: center;
    height: 30px;
    vertical-align: center;
    align-items: center;
    /* Vertical centering */
    cursor: pointer;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.tabText {
    margin: auto;
    font-size: 20px;
    font-weight: bold;
}

.selectedButton {
    background-color: #fff;
}

.selectedButton:hover {
    background-color: #eee;
}

.unselectedButton {
    background-color: #d8d8d8;
    border-bottom: #999 1px solid;
    color: #999
}

.unselectedButton:hover {
    background-color: #ccc;
    color: #000
}

.diffObject,
.historyObject {
    transition: 0.2s;
    display: grid;
    grid-template-columns: 0.5fr 4fr 0.5fr;
    justify-content: space-around;
    width: $sidebar-content-width;
    border-radius: 8px;
    background-color: #f0f0f0;
    margin: auto;
    margin-bottom: 10px;
    text-align: center;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.diffObject:hover,
.historyObject:hover {
    cursor: pointer;
    // scale: 1.1;
    background-color: darken($light-grey, 10%);
}

.diffObject{
    margin-left: 20px;
    grid-template-columns: 2fr 2fr 0.5fr;
}

.selectedHistory {
    background-color: #dfd;
}

.selectedHistory:hover {
    background-color: #dfd;
}

.historyIcon {
    margin: 0;
    margin: auto 0;
    width: 30px;
    height: 30px;
    padding: 4px;

    border-radius: 5px;
}

.historyIcon:hover {
    cursor: pointer;
    background-color: #ddf;
    transition: 0.5s;
}

.dropdownArrow {
    transition: transform 0.3s ease;
    margin: 0;
    margin: auto 0;
    width: 20px;
    height: 20px;
    padding: 4px;

    border-radius: 5px;
}

.dropdownArrow:hover {
    cursor: pointer;
    background-color: #ddf;
}

.dropdownArrow.expanded {
    transform: rotate(90deg);
    /* Rotate 180 degrees when expanded */
}

